name:                simple-packrat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/simple-packrat#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5, template-haskell
  default-language:    Haskell2010

executable simple-packrat-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple-packrat
  default-language:    Haskell2010

executable helloRecurse
  hs-source-dirs:      steps/useMyToken
  main-is:             helloRecurse.hs
  other-modules:       Lexer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base
                     , simple-packrat
  default-language:    Haskell2010

executable helloMonad
  hs-source-dirs:      steps/useMyToken
  main-is:             helloMonad.hs
  other-modules:       Lexer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base
                     , simple-packrat
  default-language:    Haskell2010

executable helloMemo
  hs-source-dirs:      steps/useMyToken
  main-is:             helloMemo.hs
  other-modules:       Lexer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base
                     , simple-packrat
  default-language:    Haskell2010

executable helloPapillon
  hs-source-dirs:      steps/useMyToken
  main-is:             helloPapillon.hs
  other-modules:       Lexer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, simple-packrat, papillon
  default-language:    Haskell2010

executable yjMemo
  hs-source-dirs:      steps/yj
  main-is:             yjMemo.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, simple-packrat, papillon, transformers, monads-tf
  default-language:    Haskell2010

executable pprYjMemo
  hs-source-dirs:      steps/yj
  main-is:             pprYjMemo.hs
  other-modules:       MkYjMemo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, simple-packrat, papillon, transformers, monads-tf,
                       template-haskell
  default-language:    Haskell2010

executable useYjMemo
  hs-source-dirs:      steps/yj
  main-is:             useYjMemo.hs
  other-modules:       MkYjMemo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, simple-packrat, papillon, transformers, monads-tf,
                       template-haskell
  default-language:    Haskell2010

executable useYjPap
  hs-source-dirs:      steps/yj
  main-is:             useYjPap.hs
  other-modules:       ParseYjPap, MakeYjPap
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, simple-packrat, papillon, transformers, monads-tf,
                       template-haskell
  default-language:    Haskell2010

executable pprPapillon
  hs-source-dirs:      tools
  main-is:             pprPapillon.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-tabs
  build-depends:       base, simple-packrat, papillon, template-haskell
  default-language:    Haskell2010

test-suite simple-packrat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple-packrat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple-packrat
